--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Crushie Moments</title>
-
+    <link rel="shortcut icon" href="#" />
     <link href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
     rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
