--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,9 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <h1>Hello</h1>
+    </div>
     <script src="../src/index.js" type="text/jsx"></script>
   </body>
 </html>
