--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,7 @@
   </head>
 
   <body>
-    <div id="root">
-    </div>
-    <script src="../src/index.js" type="text/jsx"></script>
+    <div id="root"></div>
+    <script src="./src/index.js" type="text/jsx" />
   </body>
 </html>
