--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,6 @@
 
   <body>
     <div id="root"></div>
-    <script src="../src/index.js" type="text/jsx" />
+    <script src="./src/index.js" type="text/jsx" />
   </body>
 </html>
